@@ -39,7 +39,7 @@ public class LoadCreatedAdviceDetailsAdapter implements
     }
 
     private LoadCreatedAdviceDetailsPort.Result mapToAdviceListItem(List<QuestionAdviceView> questionAdviceViews) {
-        var view = questionAdviceViews.get(0);
+        var view = questionAdviceViews.getFirst();
         AdviceQuestion question = new AdviceQuestion(view.getId(), view.getTitle(), view.getIndex());
 
         var options = questionAdviceViews.stream()
