@@ -90,11 +90,10 @@ public class QuestionPersistenceJpaAdapter implements
     }
 
     private QuestionImpact setOptionImpacts(QuestionImpact impact) {
-        impact.setOptionImpacts(
-            answerOptionImpactRepository.findAllByQuestionImpactId(impact.getId()).stream()
-                .map(AnswerOptionImpactMapper::mapToDomainModel)
-                .toList()
-        );
+        var optionImpacts = answerOptionImpactRepository.findAllByQuestionImpactIdAndKitVersionId(impact.getId(), impact.getKitVersionId()).stream()
+            .map(AnswerOptionImpactMapper::mapToDomainModel)
+            .toList();
+        impact.setOptionImpacts(optionImpacts);
         return impact;
     }
 
@@ -113,9 +112,9 @@ public class QuestionPersistenceJpaAdapter implements
         return myMap.entrySet().stream()
             .map(entry -> {
                 Question question = QuestionMapper.mapToDomainModel(entry.getKey());
-                Questionnaire questionnaire = mapToDomainModel(entry.getValue().get(0).getQuestionnaire());
+                Questionnaire questionnaire = mapToDomainModel(entry.getValue().getFirst().getQuestionnaire());
 
-                QuestionImpact impact = QuestionImpactMapper.mapToDomainModel(entry.getValue().get(0).getQuestionImpact());
+                QuestionImpact impact = QuestionImpactMapper.mapToDomainModel(entry.getValue().getFirst().getQuestionImpact());
                 Map<Long, AnswerOptionImpactJpaEntity> optionMap = entry.getValue().stream()
                     .collect(Collectors.toMap(e -> e.getOptionImpact().getId(), AttributeLevelImpactfulQuestionsView::getOptionImpact,
                         (existing, replacement) -> existing));
